# l3xz_gait_ctrl

./: .codespellrc  CMakeLists.txt  README.md  package.xml
.github/workflows/: ros2.yml
include/l3xz_ctrl/: ControlNode.h  GaitControlNode.h  Node.h
include/l3xz_ctrl/const/: LegList.h
include/l3xz_ctrl/gait/: GaitController.h  GaitControllerInput.h  GaitControllerOutput.h
include/l3xz_ctrl/gait/state/: StandUp.h  Standing.h  StateBase.h  Turning.h  Walking.h
include/l3xz_ctrl/head/: HeadController.h  HeadControllerInput.h  HeadControllerOutput.h
include/l3xz_ctrl/head/state/: Init.h  StateBase.h  Teleop.h
include/l3xz_ctrl/kinematic/: Engine.h  FK_Input.h  FK_Output.h  IK_Input.h  IK_Output.h
include/l3xz_ctrl/types/: Joint.h  Leg.h  LegJoint.h  TeleopCommandData.h  Types.h
include/l3xz_gait_ctrl/: GaitControlNode.h  Node.h
include/l3xz_gait_ctrl/const/: JointList.h  LegList.h
include/l3xz_gait_ctrl/gait/: GaitController.h  GaitControllerInput.h  GaitControllerOutput.h
include/l3xz_gait_ctrl/gait/state/: Init.h  Init_Coxa.h  Init_Femur.h  Init_Tibia.h  PositionTrajectory.h  SitDown.h  Sitting.h  StandUp.h  Standing.h  (+3 more)
include/l3xz_gait_ctrl/kinematic/: Engine.h  FK_Input.h  FK_Output.h  IK_Input.h  IK_Output.h
include/l3xz_gait_ctrl/types/: Joint.h  Leg.h  LegJoint.h  Point3D.h
launch/: ctrl.py  gait_ctrl.py
msg/: Head.msg  Leg.msg  LegAngle.msg
msg/input/: Input.msg
msg/output/: Output.msg
src/: ControlNode.cpp  GaitControlNode.cpp  Node.cpp  main.cpp
src/gait/: GaitController.cpp  GaitControllerInput.cpp  GaitControllerOutput.cpp
src/gait/state/: Init.cpp  Init_Coxa.cpp  Init_Femur.cpp  Init_Tibia.cpp  PositionTrajectory.cpp  SitDown.cpp  Sitting.cpp  StandUp.cpp  Standing.cpp  Turning.cpp  Walking.cpp
src/head/: HeadController.cpp  HeadControllerOutput.cpp
src/head/state/: Init.cpp  Teleop.cpp
src/kinematic/: Engine.cpp  FK_Output.cpp  IK_Output.cpp
src/types/: Joint.cpp  Leg.cpp
(+1 files in other folders)
